Fix align pannel

--- a/src/components/Panel/panel.css
+++ b/src/components/Panel/panel.css
@@ -4,4 +4,5 @@
     width: 40%;
     background-color: var(--pallete-gray-mid);
     border-radius: 1rem;
+    justify-content: center;
 }
